# flipkart_hackathon

./: .gitattributes  .gitignore  =3.2  IMPLEMENTATION_PLAN.md  LOCAL_SETUP.md  README.md  backend_work_split.md  pyproject.toml  requirements.txt
agents/: approval_queue.py  demo_flow.py  dispatcher.py  feedback_ingestor.py  kannada_translator.py  llm_explainer.py  mailer.py  pipeline_runner.py  plan_generator.py  scheduler.py  state_manager.py
app/: __init__.py
cache/: bengaluru_drive_graph.graphml
demo/: generate_demo_report.py  run_two_week_demo.py  synth_feedback.py  synth_officers.py  synth_tow_trucks.py  synth_weekly_scores.py
docs/: BACKEND_HANDOVER_AND_UI_SPEC.md  DEMO_SYNTHETIC_AGENT_WORKFLOW.md  END_TO_END_WORKFLOW.md  PRODUCT_VISION_AND_AGENTIC_LAYER_PLAN.md  THEME.md  UI_DEMO_REQUIREMENTS.md
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
pipeline/: 01_clean.py  02_cluster.py  03_jurisdiction.py  03a_peak_windows.py  03b_classify_hotspots.py  03c_merge_prakhar_features.py  04_enrich_osm.py  04b_build_road_graph.py  05_score.py  06_optimize_vrp.py  07_validate.py  __init__.py  m1_roi_ranker.py  m7_bci.py  run_phase1.py  run_prakhar_phase2.py
references/: bengaluru_drive.graphml  node_betweenness.json  scored_hotspots_schema.md
reports/: AGENT_LAYER_FINAL_CLEANUP_REPORT.md  AGENT_LAYER_HARDENING_REPORT.md  API_ADAPTER_MVP_REPORT.md  BCI_VALIDATION_REPORT.md  DAILY_MASTER_PLAN.md  FEEDBACK_LOOP_VALIDATION_REPORT.md  FINAL_END_TO_END_VALIDATION_REPORT.md  (+18 more)
(+232 files in other folders)
