[project]
name = "flipkart-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "folium>=0.20.0",
    "h3>=4.5.0",
    "matplotlib>=3.10.9",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pyarrow>=24.0.0",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
]
